echoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-direct-service
  labels:
    app: echoserver
spec:
  type: LoadBalancer
  selector:
    app: echoserver
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-envoy-admin-service
  labels:
    app: echoserver
spec:
  type: LoadBalancer
  selector:
    app: echoserver
  ports:
    - name: http
      protocol: TCP
      port: 9901
      targetPort: 9901
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-envoy-service
  labels:
    app: echoserver
spec:
  type: LoadBalancer
  selector:
    app: echoserver
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
